@@ -1,6 +1,7 @@
 package net.loveruby.cflat.sysdep;
 import net.loveruby.cflat.utils.ErrorHandler;
 import net.loveruby.cflat.type.TypeTable;
+import net.loveruby.cflat.asm.Type;
 
 public class X86Linux implements Platform {
     public TypeTable typeTable() {
@@ -9,7 +10,12 @@ public class X86Linux implements Platform {
 
     public CodeGenerator codeGenerator(
             CodeGeneratorOptions opts, ErrorHandler h) {
-        return new net.loveruby.cflat.sysdep.x86.CodeGenerator(opts, h);
+        return new net.loveruby.cflat.sysdep.x86.CodeGenerator(
+                opts, naturalType(), h);
+    }
+
+    private Type naturalType() {
+        return Type.INT32;
     }
 
     public Assembler assembler(ErrorHandler h) {
